--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="https://www.google.com/maps/place/New+York+City+Hall/@40.7127744,-74.006059,15z/data=!4m2!3m1!1s0x0:0x7f1e88758d210007?sa=X&ved=0ahUKEwjV7O_i58zPAhVEeT4KHYThDvkQ_BIIgAEwDA" target="_blank">
           City Hall
         </a>
-        on December 23rd at 2pm, followed by dinner.
+        on December 23rd, followed by dinner.
       </p>
       <p>
         Details to come.
