--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section>
     <div class="content-wrapper">
       <p>
-        New York is a special place for us and you're special to us, so please join us as we  make this thing offical in a small ceremony with our immediate family. (We know, FINALLY?!?!)
+        New York is a special place to us and you're special to us, so please join us as we  make this thing offical in a small ceremony with our immediate family. (We know, FINALLY?!?!)
       </p>
     </div>
   </section>
