--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <section class="section-title">
     <h1>Jen and John <br/>are getting married.</h1>
   </section>
-  <div class="divider" id="backstory">
-    <a data-scroll href="#backstory" class="next"><div class="arrow-down"></div></a>
+  <div class="divider" id="yay-nyc">
+    <a data-scroll href="#yay-nyc" class="next"><div class="arrow-down"></div></a>
   </div>
   <section>
     <div class="content-wrapper">
