--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <h2>where to stay</h2>
       <p>
         We've booked an 
-        <a href="https://www.airbnb.com/rooms/15409514?guests=10&s=xRPaesNz" target="_blank">
-        Airbnb in the Upper East Side
+        <a href="https://www.airbnb.com/rooms/14569955?guests=7&s=qGx471FY&check_in=2016-12-21&check_out=2016-12-26" target="_blank">
+        Airbnb in Williamsburg, Brooklyn
         </a>
         to accomodate both families from 12/21&nbsp;-&nbsp;12/26.
       </p>
