--- a/index.html
+++ b/index.html
@@ -5,22 +5,107 @@
   <title>jxj</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <style>
-    @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400';
+    @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600';
   </style>
-  <link rel="stylesheet" href="build/index.css">
-  <script type="text/javascript" src="build/all.index.js"></script>
+  <style>
+body {
+  font-family: 'Open Sans', sans-serif;
+  max-width: 720px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 0 20px; }
+
+section {
+  position: relative;
+  height: 100vh;
+  font-weight: 300; }
+  section h2 {
+    font-weight: 300;
+    margin-top: 0;
+    font-size: 32px; }
+    @media (min-width: 768px) {
+      section h2 {
+        font-size: 36px; } }
+  section a {
+    text-decoration: none;
+    color: black;
+    font-weight: 400; }
+  section ul, section ol {
+    padding: 0;
+    margin: 0; }
+  section li {
+    list-style: none; }
+  section p {
+    padding: 0 20px;
+    line-height: 1.6;
+    max-width: 480px;
+    margin: 0 auto; }
+
+.content-wrapper {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%); }
+
+.section-title h1 {
+  font-size: 42px;
+  font-weight: 300;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-top: 0; }
+
+.section-final h2 {
+  font-size: 48px;
+  font-weight: 300;
+  line-height: 100vh; }
+
+.divider {
+  border-bottom: 1px solid rgba(220, 220, 220, 0.4);
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative; }
+
+.next {
+  cursor: pointer;
+  position: absolute;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin: 0 auto; }
+
+.arrow-down {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-right: 2px solid gainsboro;
+  border-top: 2px solid gainsboro;
+  transform: rotate(135deg); }
+
+.faq {
+  margin: 20px; }
+
+.faq-question {
+  font-weight: 600;
+  margin-bottom: 3px; }
+  .faq-question::before {
+    content: "Q:";
+    font-weight: 600;
+    margin-right: 10px; }
+</style>
 </head>
 <body>
   <section class="section-title">
     <h1>Jen and John <br/>are getting married.</h1>
   </section>
-  <div class="divider" id="yay-nyc">
-    <a data-scroll href="#yay-nyc" class="next"><div class="arrow-down"></div></a>
+  <div class="divider" id="backstory">
+    <a data-scroll href="#backstory" class="next"><div class="arrow-down"></div></a>
   </div>
   <section>
     <div class="content-wrapper">
       <p>
-        New York is a special place to us and you're special to us, so please join us as we  make this thing offical in a small ceremony with our immediate family. (We know, FINALLY?!?!)
+        New York is a special place for us and you're special to us, so please join us as we  make this thing offical in a small ceremony with our immediate family. (We know, FINALLY?!?!)
       </p>
     </div>
   </section>
@@ -34,7 +119,7 @@
         <a href="https://www.google.com/maps/place/New+York+City+Hall/@40.7127744,-74.006059,15z/data=!4m2!3m1!1s0x0:0x7f1e88758d210007?sa=X&ved=0ahUKEwjV7O_i58zPAhVEeT4KHYThDvkQ_BIIgAEwDA" target="_blank">
           City Hall
         </a>
-        on December 23rd, followed by dinner.
+        on December 23rd at 2pm, followed by dinner.
       </p>
       <p>
         Details to come.
@@ -49,8 +134,8 @@
       <h2>where to stay</h2>
       <p>
         We've booked an 
-        <a href="https://www.airbnb.com/rooms/14569955?guests=7&s=qGx471FY&check_in=2016-12-21&check_out=2016-12-26" target="_blank">
-        Airbnb in Williamsburg, Brooklyn
+        <a href="https://www.airbnb.com/rooms/15409514?guests=10&s=xRPaesNz" target="_blank">
+        Airbnb in the Upper East Side
         </a>
         to accomodate both families from 12/21&nbsp;-&nbsp;12/26.
       </p>
@@ -90,8 +175,22 @@
   <div class="divider" id="see-you-soon">
     <a data-scroll href="#see-you-soon" class="next"><div class="arrow-down"></div></a>
   </div>
+  <section class="section-content">
+    <div class="content-wrapper">
+      <h2>FAQ</h2>
+      <div id="js-faq-wrapper">
+        
+      </div>
+    </div>
+  </section>
+  <div class="divider" id="faq">
+    <a data-scroll href="#faq" class="next"><div class="arrow-down"></div></a>
+  </div>
   <section class="section-final">
     <h2>See you soon!</h2>
   </section>
+  <script>
+!function(e,t){"function"==typeof define&&define.amd?define([],t(e)):"object"==typeof exports?module.exports=t(e):e.smoothScroll=t(e)}("undefined"!=typeof global?global:this.window||this.global,function(e){"use strict";var t,n,o,r,a,i,c,l={},s="querySelector"in document&&"addEventListener"in e,u={selector:"[data-scroll]",selectorHeader:null,speed:500,easing:"easeInOutCubic",offset:0,callback:function(){}},d=function(){var e={},t=!1,n=0,o=arguments.length;"[object Boolean]"===Object.prototype.toString.call(arguments[0])&&(t=arguments[0],n++);for(var r=function(n){for(var o in n)Object.prototype.hasOwnProperty.call(n,o)&&(t&&"[object Object]"===Object.prototype.toString.call(n[o])?e[o]=d(!0,e[o],n[o]):e[o]=n[o])};n<o;n++){var a=arguments[n];r(a)}return e},f=function(e){return Math.max(e.scrollHeight,e.offsetHeight,e.clientHeight)},h=function(e,t){var n,o,r=t.charAt(0),a="classList"in document.documentElement;for("["===r&&(t=t.substr(1,t.length-2),n=t.split("="),n.length>1&&(o=!0,n[1]=n[1].replace(/"/g,"").replace(/'/g,"")));e&&e!==document&&1===e.nodeType;e=e.parentNode){if("."===r)if(a){if(e.classList.contains(t.substr(1)))return e}else if(new RegExp("(^|\\s)"+t.substr(1)+"(\\s|$)").test(e.className))return e;if("#"===r&&e.id===t.substr(1))return e;if("["===r&&e.hasAttribute(n[0])){if(!o)return e;if(e.getAttribute(n[0])===n[1])return e}if(e.tagName.toLowerCase()===t)return e}return null},m=function(e){"#"===e.charAt(0)&&(e=e.substr(1));for(var t,n=String(e),o=n.length,r=-1,a="",i=n.charCodeAt(0);++r<o;){if(t=n.charCodeAt(r),0===t)throw new InvalidCharacterError("Invalid character: the input contains U+0000.");a+=t>=1&&t<=31||127==t||0===r&&t>=48&&t<=57||1===r&&t>=48&&t<=57&&45===i?"\\"+t.toString(16)+" ":t>=128||45===t||95===t||t>=48&&t<=57||t>=65&&t<=90||t>=97&&t<=122?n.charAt(r):"\\"+n.charAt(r)}return"#"+a},b=function(e,t){var n;return"easeInQuad"===e&&(n=t*t),"easeOutQuad"===e&&(n=t*(2-t)),"easeInOutQuad"===e&&(n=t<.5?2*t*t:-1+(4-2*t)*t),"easeInCubic"===e&&(n=t*t*t),"easeOutCubic"===e&&(n=--t*t*t+1),"easeInOutCubic"===e&&(n=t<.5?4*t*t*t:(t-1)*(2*t-2)*(2*t-2)+1),"easeInQuart"===e&&(n=t*t*t*t),"easeOutQuart"===e&&(n=1- --t*t*t*t),"easeInOutQuart"===e&&(n=t<.5?8*t*t*t*t:1-8*--t*t*t*t),"easeInQuint"===e&&(n=t*t*t*t*t),"easeOutQuint"===e&&(n=1+--t*t*t*t*t),"easeInOutQuint"===e&&(n=t<.5?16*t*t*t*t*t:1+16*--t*t*t*t*t),n||t},g=function(e,t,n){var o=0;if(e.offsetParent)do o+=e.offsetTop,e=e.offsetParent;while(e);return o=Math.max(o-t-n,0),Math.min(o,v()-p())},p=function(){return Math.max(document.documentElement.clientHeight,e.innerHeight||0)},v=function(){return Math.max(document.body.scrollHeight,document.documentElement.scrollHeight,document.body.offsetHeight,document.documentElement.offsetHeight,document.body.clientHeight,document.documentElement.clientHeight)},y=function(e){return e&&"object"==typeof JSON&&"function"==typeof JSON.parse?JSON.parse(e):{}},w=function(e){return e?f(e)+e.offsetTop:0},O=function(t,n,o){o||(t.focus(),document.activeElement.id!==t.id&&(t.setAttribute("tabindex","-1"),t.focus(),t.style.outline="none"),e.scrollTo(0,n))};l.animateScroll=function(n,o,i){var l=y(o?o.getAttribute("data-options"):null),s=d(t||u,i||{},l),f="[object Number]"===Object.prototype.toString.call(n),h=f||!n.tagName?null:n;if(f||h){var m=e.pageYOffset;s.selectorHeader&&!r&&(r=document.querySelector(s.selectorHeader)),a||(a=w(r));var p,I,H=f?n:g(h,a,parseInt(s.offset,10)),S=H-m,A=v(),j=0,q=function(t,r,a){var i=e.pageYOffset;(t==r||i==r||e.innerHeight+i>=A)&&(clearInterval(a),O(n,r,f),s.callback(n,o))},E=function(){j+=16,p=j/parseInt(s.speed,10),p=p>1?1:p,I=m+S*b(s.easing,p),e.scrollTo(0,Math.floor(I)),q(I,H,c)},k=function(){clearInterval(c),c=setInterval(E,16)};0===e.pageYOffset&&e.scrollTo(0,0),k()}};var I=function(t){e.location.hash,n&&(n.id=n.getAttribute("data-scroll-id"),l.animateScroll(n,o),n=null,o=null)},H=function(r){if(0===r.button&&!r.metaKey&&!r.ctrlKey&&(o=h(r.target,t.selector),o&&"a"===o.tagName.toLowerCase()&&o.hostname===e.location.hostname&&o.pathname===e.location.pathname&&/#/.test(o.href))){var a=m(o.hash);if("#"===a){r.preventDefault(),n=document.body;var i=n.id?n.id:"smooth-scroll-top";return n.setAttribute("data-scroll-id",i),n.id="",void(e.location.hash.substring(1)===i?I():e.location.hash=i)}n=document.querySelector(a),n&&(n.setAttribute("data-scroll-id",n.id),n.id="",o.hash===e.location.hash&&(r.preventDefault(),I()))}},S=function(e){i||(i=setTimeout(function(){i=null,a=w(r)},66))};return l.destroy=function(){t&&(document.removeEventListener("click",H,!1),e.removeEventListener("resize",S,!1),t=null,n=null,o=null,r=null,a=null,i=null,c=null)},l.init=function(n){s&&(l.destroy(),t=d(u,n||{}),r=t.selectorHeader?document.querySelector(t.selectorHeader):null,a=w(r),document.addEventListener("click",H,!1),e.addEventListener("hashchange",I,!1),r&&e.addEventListener("resize",S,!1))},l}),smoothScroll.init(),function(){function e(e,t,n){var o=n.join(""),r=[];t&&r.push(["class",'="',t,'"'].join(""));var a=r.join(" ");return"<"+e+" "+a+">"+o+"</"+e+">"}for(var t=[{q:"Why the rush?",a:["We've been together for 9 years, so what better time than now? <br/>And, no, Jen is not pregnant."]},{q:"What time is check-in/check-out?",a:"Standard check in is 3PM and check out is 11AM, but the Airbnb host is open to arranging earlier/later times as needed. Once everyone has their flight booked we will adjust the reservation accordingly."},{q:"Wont it be cold?",a:"Yes, please check the forecast before packing. Don't forget to bring a warm jacket."},{q:"What should I wear to the ceremony?",a:"Wear something that makes you feel classy without sacrificing comfort. <br/>Remember, it will be cold."},{q:"Will I meet Panda 🐶?",a:"Sadly, Panda is not allowed at the Airbnb, but we will make sure everyone meets her."}],n="",o=0;o<t.length;o++){var r=t[o],a=e("div","faq-question",[r.q]),i=e("div","faq-answer",[r.a]);n+=e("div","faq",[a,i])}document.getElementById("js-faq-wrapper").innerHTML=n}();
+</script>
 </body>
 </html>
