--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ section {
     content: "Q:";
     font-weight: 600;
     margin-right: 10px; }
+
 </style>
 </head>
 <body>
@@ -134,8 +135,8 @@ section {
       <h2>where to stay</h2>
       <p>
         We've booked an 
-        <a href="https://www.airbnb.com/rooms/15409514?guests=10&s=xRPaesNz" target="_blank">
-        Airbnb in the Upper East Side
+        <a href="https://www.airbnb.com/rooms/14569955?guests=7&s=qGx471FY&check_in=2016-12-21&check_out=2016-12-26" target="_blank">
+          Airbnb in Williamsburg, Brooklyn
         </a>
         to accomodate both families from 12/21&nbsp;-&nbsp;12/26.
       </p>
@@ -178,9 +179,7 @@ section {
   <section class="section-content">
     <div class="content-wrapper">
       <h2>FAQ</h2>
-      <div id="js-faq-wrapper">
-        
-      </div>
+      <div id="js-faq-wrapper"></div>
     </div>
   </section>
   <div class="divider" id="faq">
