--- a/index.html
+++ b/index.html
@@ -120,10 +120,14 @@ section {
         <a href="https://www.google.com/maps/place/New+York+City+Hall/@40.7127744,-74.006059,15z/data=!4m2!3m1!1s0x0:0x7f1e88758d210007?sa=X&ved=0ahUKEwjV7O_i58zPAhVEeT4KHYThDvkQ_BIIgAEwDA" target="_blank">
           City Hall
         </a>
-        on December 23rd at 2pm, followed by dinner.
-      </p>
-      <p>
-        Details to come.
+        on December 23rd at 12 noon,
+        <p>
+          followed by dinner at
+          <a href="http://frenchlouienyc.com/" target="_blank">
+            French Louie
+          </a>
+          at 5:30pm.
+        </p>
       </p>
     </div>
   </section>
@@ -134,14 +138,14 @@ section {
     <div class="content-wrapper">
       <h2>where to stay</h2>
       <p>
-        We've booked an 
+        We've booked an
         <a href="https://www.airbnb.com/rooms/14569955?guests=7&s=qGx471FY&check_in=2016-12-21&check_out=2016-12-26" target="_blank">
           Airbnb in Williamsburg, Brooklyn
         </a>
         to accomodate both families from 12/21&nbsp;-&nbsp;12/26.
       </p>
       <p>
-        Details to come.
+        Please see email for details.
       </p>
     </div>
   </section>
